--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,24 @@ h2{
     text-align: center;
 }
 #result{
-    width:150px;
+    width:auto;
+    height:auto;
     margin:10px auto;
     font-weight: 800;
     font-size: large;
     border:none;
+    overflow:auto;
+    text-align: left;
+}
+#listOfEven{
+    width:auto;
+    height:auto;
+    margin:15px auto;
+    background: white;
+    font-weight: 700;
+    padding:5px;
+    text-align: center;
+    border-radius: 8px;
+    overflow-x: auto;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.432);
 }
